# polyte

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  release.yml
polyoxide/: Cargo.toml  README.md
polyoxide-cli/: Cargo.toml  README.md
polyoxide-cli/src/: main.rs
polyoxide-cli/src/commands/: completions.rs  mod.rs
polyoxide-cli/src/commands/common/: parsing.rs
polyoxide-cli/src/commands/data/: activity.rs  builders.rs  holders.rs  live_volume.rs  mod.rs  open_interest.rs  positions.rs  traded.rs  trades.rs
polyoxide-cli/src/commands/gamma/: comments.rs  events.rs  markets.rs  mod.rs  series.rs  sports.rs  tags.rs
polyoxide-cli/src/commands/ws/: market.rs  user.rs
polyoxide-clob/: Cargo.toml  README.md
polyoxide-clob/examples/: test_order.rs  ws_market.rs  ws_user.rs
polyoxide-clob/src/: client.rs  error.rs  lib.rs  request.rs  types.rs  utils.rs
polyoxide-clob/src/account/: credentials.rs  mod.rs  signer.rs  wallet.rs
polyoxide-clob/src/api/: account.rs  health.rs  markets.rs  orders.rs
polyoxide-clob/src/core/: eip712.rs
polyoxide-clob/src/ws/: auth.rs  client.rs  market.rs  mod.rs  subscription.rs  user.rs
polyoxide-clob/tests/: live_api.rs
polyoxide-core/: Cargo.toml  README.md
polyoxide-core/src/: auth.rs  client.rs  error.rs  lib.rs  macros.rs  rate_limit.rs  request.rs
polyoxide-data/: Cargo.toml  README.md
polyoxide-data/src/: client.rs  error.rs  lib.rs  types.rs
polyoxide-data/src/api/: builders.rs  health.rs  holders.rs  live_volume.rs  open_interest.rs  trades.rs  users.rs
polyoxide-data/tests/: live_api.rs
polyoxide-gamma/: Cargo.toml  README.md
polyoxide-gamma/src/: client.rs  error.rs  lib.rs  types.rs
polyoxide-gamma/src/api/: comments.rs  events.rs  health.rs  markets.rs  series.rs  sports.rs  tags.rs  user.rs
polyoxide-gamma/tests/: live_api.rs
polyoxide-relay/: Cargo.toml
polyoxide-relay/examples/: get_nonce.rs  redeem.rs
polyoxide-relay/src/: account.rs  client.rs  config.rs  error.rs  lib.rs  types.rs
polyoxide-relay/tests/: live_api.rs
polyoxide/src/: lib.rs
polyte/: Cargo.toml  README.md
polyte-cli/: Cargo.toml  README.md
polyte-cli/src/: main.rs
polyte-cli/src/commands/: completions.rs  mod.rs
polyte-cli/src/commands/common/: parsing.rs
polyte-cli/src/commands/data/: activity.rs  holders.rs  open_interest.rs  positions.rs  trades.rs
polyte-cli/src/commands/gamma/: comments.rs  events.rs  markets.rs  mod.rs  series.rs  sports.rs  tags.rs
polyte-cli/src/commands/ws/: market.rs  mod.rs  user.rs
polyte-clob/: Cargo.toml  README.md
polyte-clob/examples/: retrieve_markets.rs  test_order.rs
polyte-clob/src/: client.rs  error.rs  lib.rs  request.rs  types.rs  utils.rs
polyte-clob/src/account/: mod.rs
polyte-clob/src/api/: account.rs  health.rs  markets.rs  mod.rs  orders.rs
polyte-clob/src/core/: eip712.rs
polyte-core/: Cargo.toml
polyte-core/src/: error.rs  lib.rs
polyte-data/: Cargo.toml  README.md
polyte-data/src/: client.rs  error.rs  lib.rs
polyte-data/src/api/: builders.rs  health.rs  holders.rs  live_volume.rs  open_interest.rs  trades.rs  users.rs
polyte-gamma/: Cargo.toml
polyte-gamma/examples/: retrieve_markets.rs
polyte-gamma/src/: client.rs  error.rs  lib.rs  types.rs
polyte-gamma/src/api/: comments.rs  events.rs  health.rs  markets.rs  mod.rs  series.rs  sports.rs  tags.rs  user.rs
polyte-relay/: .env.example  Cargo.toml
polyte-relay/examples/: get_nonce.rs  redeem.rs
polyte-relay/src/: client.rs  config.rs  error.rs  lib.rs  types.rs
polyte/src/: lib.rs
scripts/: finish_release.sh  install.sh
