[workspace]
members = [
  "polyoxide",
  "polyoxide-cli",
  "polyoxide-clob",
  "polyoxide-core",
  "polyoxide-data",
  "polyoxide-gamma",
  "polyoxide-relay",
]
resolver = "2"

[workspace.package]
version = "0.8.1"
edition = "2021"
license = "MIT"
authors = ["Aidan Bailey"]
repository = "https://github.com/dilettante-trading/polyoxide"
rust-version = "1.75"

[workspace.dependencies]
polyoxide-core = { path = "polyoxide-core", version = "0.8.1" }
polyoxide-clob = { path = "polyoxide-clob", version = "0.8.1" }
polyoxide-gamma = { path = "polyoxide-gamma", version = "0.8.1" }
polyoxide-data = { path = "polyoxide-data", version = "0.8.1" }
polyoxide-relay = { path = "polyoxide-relay", version = "0.8.1" }
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"
url = "2.5"
hex = "0.4"
tracing = "0.1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rust_decimal = { version = "1.37", features = ["serde-with-str"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
