[package]
name = "polyoxide-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core utilities and shared types for Polyoxide Polymarket API clients"
keywords = ["polymarket", "api", "core"]
categories = ["api-bindings"]

[features]
default = []

[dependencies]
base64 = { workspace = true }
hmac = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
governor = { workspace = true }
fastrand = { workspace = true }
tokio = { workspace = true }
