[package]
name = "polyoxide-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust client library for Polymarket Data API"
keywords = ["polymarket", "prediction-markets"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = []
specta = ["dep:specta"]

[dependencies]
polyoxide-core = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
specta = { version = "=2.0.0-rc.20", features = ["derive", "serde"], optional = true }
