[package]
name = "polyoxide-relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rust client library for Polymarket Relayer API"
keywords = ["polymarket", "prediction-markets", "trading", "relayer"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
alloy = { version = "1.1.2", features = [
    "contract",
    "network",
    "provider-http",
    "rpc-types",
    "signer-local",
    "signers",
    "sol-types",
] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
