[package]
name = "polyte-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI tool for querying Polymarket Gamma API"
keywords = ["polymarket", "prediction-markets", "cli", "gamma"]
categories = ["command-line-utilities"]

[[bin]]
name = "polyte"
path = "src/main.rs"

[dependencies]
polyte-clob = { workspace = true }
polyte-data = { workspace = true }
polyte-gamma = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
serde_json = { workspace = true }
eyre = "0.6"
color-eyre = "0.6"
futures-util = { workspace = true }
ctrlc = "3.4"
