[package]
name = "polyte"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Unified Rust client for Polymarket APIs (CLOB, Gamma and Data)"
keywords = ["polymarket", "prediction-markets", "api", "trading"]
categories = ["api-bindings", "web-programming::http-client"]

[features]
default = ["clob", "gamma", "data"]
clob = ["dep:polyte-clob"]
gamma = ["dep:polyte-gamma"]
data = ["dep:polyte-data"]
ws = ["clob", "polyte-clob/ws"]
full = ["clob", "gamma", "data", "ws"]

[dependencies]
polyte-gamma = { workspace = true, optional = true }
polyte-clob = { workspace = true, optional = true }
polyte-data = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
